update checkReference